--- a/PinSpotConLayout/PinSpot/app/src/main/res/layout/fragment_pin_info.xml
+++ b/PinSpotConLayout/PinSpot/app/src/main/res/layout/fragment_pin_info.xml
@@ -1,119 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="@color/primaryColor"
+tools:context=".ui.main.PinInfoFragment">
+
+<View
+    android:id="@+id/divider"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    tools:context=".ui.main.PinInfoFragment">
+    android:layout_height="1dp"
+    android:layout_marginBottom="50dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <!--android:background="@drawable/edit_text_bg" -->
+<ImageView
+    android:id="@+id/rounded_bg"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:src="@drawable/rounded_corner"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="@id/divider"
+    app:layout_constraintVertical_bias="0.0" />
 
-    <!--android:background="@drawable/button_bg"-->
+<ImageView
+    android:id="@+id/rounded_bg3"
+    android:layout_width="297dp"
+    android:layout_height="634dp"
+    android:src="@drawable/rounded_corner"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="@id/divider"
+    app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
-        android:id="@+id/PinTitle_textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:text="Pin of Duomo"
-        android:textAlignment="center"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+<ImageView
+    android:id="@+id/imageView2"
+    android:layout_width="256dp"
+    android:layout_height="303dp"
+    android:layout_marginBottom="-80dp"
+    android:scaleType="fitXY"
+    android:src="@drawable/roma"
+    app:layout_constraintBottom_toTopOf="@id/rounded_bg"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="326dp"
-        android:layout_height="231dp"
-        android:layout_marginLeft="85dp"
-        android:layout_marginRight="85dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.55"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.342"
-        tools:srcCompat="@tools:sample/avatars" />
+<TextView
+    android:id="@+id/PinTitle_textView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="40dp"
+    android:layout_marginTop="20dp"
+    android:text="Duomo di milano"
+    android:textSize="35sp"
+    android:textStyle="bold"
+    android:textColor="@color/black"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/imageView2"/>
 
-    <TextView
-        android:id="@+id/textView_temperature"
-        android:layout_width="168dp"
-        android:layout_height="40dp"
-        android:background="@drawable/edit_text_bg"
-        android:drawableLeft="@drawable/ic_baseline_info_24"
-        android:drawablePadding="8dp"
-        android:gravity="center"
-        android:hint="Description"
-        android:padding="8dp"
-        android:textColor="@color/black"
-        android:textColorHighlight="@color/cardview_dark_background"
-        android:textColorHint="#01579B"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.599" />
+<TextView
+    android:id="@+id/textViewTemperature"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="40dp"
+    android:layout_marginTop="84dp"
+    android:text="Meteo"
+    android:textColor="@color/black"
+    android:textSize="20sp"
+    android:textStyle="bold"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/imageView2" />
 
-    <TextView
-        android:id="@+id/textViewWeatherDescription"
-        android:layout_width="305dp"
-        android:layout_height="73dp"
-        android:background="@drawable/edit_text_bg"
-        android:drawableLeft="@drawable/ic_baseline_info_24"
-        android:drawablePadding="8dp"
-        android:gravity="center"
-        android:hint="Description"
-        android:padding="8dp"
-        android:textColor="@color/black"
-        android:textColorHighlight="@color/cardview_dark_background"
-        android:textColorHint="#01579B"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.708" />
+<TextView
+    android:id="@+id/textViewWeatherDescription"
+    android:layout_width="72dp"
+    android:layout_height="32dp"
+    android:layout_marginStart="40dp"
+    android:layout_marginTop="52dp"
+    android:text="Temp"
+    android:textColor="@color/black"
+    android:textSize="20sp"
+    android:textStyle="bold"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/imageView2" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addPinToFav_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="66dp"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
-        android:layout_marginStart="20dp"
-        android:backgroundTint="@color/secondaryDarkColor"
-        android:contentDescription="Spot a new place"
+<com.google.android.material.floatingactionbutton.FloatingActionButton
+    android:id="@+id/addPinToFav_fab"
+    android:layout_width="wrap_content"
+    android:layout_height="66dp"
+    android:layout_gravity="end|bottom"
+    android:layout_margin="16dp"
+    android:layout_marginStart="20dp"
+    android:backgroundTint="@color/secondaryDarkColor"
+    android:contentDescription="Spot a new place"
 
-        android:src="@drawable/favourite_foreground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.952"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:maxImageSize="48dp" />
+    android:src="@drawable/favourite_foreground"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.937"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.651"
+    app:maxImageSize="48dp" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/closePinInfo_button"
-        android:layout_width="wrap_content"
-        android:layout_height="112dp"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
-        android:backgroundTint="@color/secondaryDarkColor"
-        android:contentDescription="Spot a new place"
-        android:src="@drawable/ic_baseline_arrow_back_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:maxImageSize="48dp" />
+<com.google.android.material.floatingactionbutton.FloatingActionButton
+    android:id="@+id/closePinInfo_button"
+    android:layout_width="wrap_content"
+    android:layout_height="112dp"
+    android:layout_gravity="end|bottom"
+    android:layout_margin="16dp"
+    android:backgroundTint="@color/white"
+    android:contentDescription="Spot a new place"
+    android:src="@drawable/ic_baseline_arrow_back_24"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.0"
+    app:maxImageSize="48dp" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
